CIB-2630: increase memory configuration for pulse.